--- a/main.tex
+++ b/main.tex
@@ -126,8 +126,8 @@
 % Instruction
 
 \begin{enumerate}
-\item This quiz contains {\bf 5} questions and comprises 
-{\bf 5} printed pages.
+\item This quiz contains {\bf \questionnumber} questions and comprises 
+{\bf \pageref{finalpage}} printed pages.
 \item Please write down your answers on the answer sheet. 
 \item Please write down your version number on the answer sheet.
 \item This is a {\bf CLOSE BOOK} quiz.
@@ -147,7 +147,7 @@
 % Multiple-choice questions
 \bigskip
 \paragraph{\textbf{Question 1}}
-This is an example of a multiple-choice question. For blank in question use \underline{\hspace{2cm}}.  
+This is an example of a multiple-choice question. For the blank in the question use \underline{\hspace{2cm}}.  
 \begin{enumerate}[label=\alph*.]
     \item option 1
     \item option 2
@@ -155,10 +155,10 @@ This is an example of a multiple-choice question. For blank in question use \und
     \item option 4
 \end{enumerate}
 
-% Fill-in-blank questions
+% Fill-in-the-blank questions
 \newpage
 \paragraph{\textbf{Question 2}}
-This is an example of a fill-in-blank question
+This is an example of a fill-in-the-blank question
 \begin{enumerate}
     \item The process of photosynthesis occurs in \underline{\hspace{5cm}}.
     \item Water freezes at \underline{\hspace{2cm}} degrees Celsius.
@@ -167,7 +167,7 @@ This is an example of a fill-in-blank question
 % True-or-False questions
 \newpage
 \paragraph{\textbf{Question 3}}
-This is an example of a True or False question. Mark the following True or False
+This is an example of a True or False question. Mark the following True or False.
 \begin{enumerate}
     \item \underline{\hspace{0.5cm}} The Earth revolves around the Sun.
     \item \underline{\hspace{0.5cm}} Water boils at 100 degrees Celsius at standard atmospheric pressure.
